--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   provider: ^6.0.3
+  url_launcher: ^6.1.4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
